--- a/render/package.json
+++ b/render/package.json
@@ -10,9 +10,8 @@
     "test": "jest",
     "start": "http-server src/templates/ -c-1",
     "clean": "rm -r dist/",
-    "gcp-build": "node node_modules/puppeteer/install.js",
     "build": "ttsc && rm -r dist/templates/ && cp -r src/templates dist/templates && cp package.json package-lock.json tsconfig.json dist/",
-    "render": "./src/entrypoints/cli.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 --width 1852 --height 1314 --paddingTop 70 --paddingRight 10 --paddingBottom 20 --paddingLeft 10",
+    "render": "./src/entrypoints/cli.ts --lat 53.48 --lon -2.24 --timezone Europe/London --locationName Manchester --batteryLevel 100 --width 1852 --height 1314 --paddingTop 70 --paddingRight 10 --paddingBottom 20 --paddingLeft 10",
     "random": "./src/entrypoints/cli.ts --random --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100"
   },
   "author": "",
